k8s/manifest/nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: health.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 8080
